--- a/Documentación/bibliography.bib
+++ b/Documentación/bibliography.bib
@@ -1,64 +1,194 @@
-@online{url:mygithub,
+@online{ndlib:libreria,
   author = {José Ángel García},
   title = {Github repository},
-  year = 2020,
-  url = {https://github.com/ealtamirano},
-  urldate = {2020-11-19}
+  year = 2021,
+  url = {https://github.com/GiulioRossetti/ndlib},
+  urldate = {2021-01-07}
 }
 
-@article{definition:redsocial,
-    author 		= {Danah M. Boyd, Nicole B. Ellison},
-    title 		= {Social Network Sites: Definition, History, and Scholarship},
-    year 		= {2007},
-    url 		= {https://onlinelibrary.wiley.com/doi/10.1111/j.1083-6101.2007.00393.x},
-    urldate 		= {2020-12-16},
+
+@article{granovetter:1978,
+    author 		= {Mark Granovetter},
+    title 		= {Threshold Models of Collective Behavior},
+    year 		= {1978},
+    url 		= {https://www.journals.uchicago.edu/doi/abs/10.1086/226707},
+    urldate 		= {2021-01-06},
 }
+
+@article{Szor:2004,
+    author 		= {Peter Szor},
+    title 		= {Fighting Computer Virus Attacks},
+    year 		= {2004},
+    url 		= {https://www.usenix.org/conference/13th-usenix-security-symposium/presentation/fighting-computer-virus-attacks},
+    urldate 		= {2021-01-06},
+}
+
+@article{Haviln:2009,
+    author 		= {Shlomo Havlin},
+    title 		= {Phone Infections},
+    year 		= {2009},
+    url 		= {https://science.sciencemag.org/content/324/5930/1023/tab-figures-data},
+    urldate 		= {2021-01-06},
+}
+
+@article{Wang:2013,
+    author 		= {Wang, Pu},
+    title 		= {Understanding the spread of malicious mobile-phone programs and their damage potential},
+    year 		= {2013},
+    url 		= {https://dspace.mit.edu/handle/1721.1/103101},
+    urldate 		= {2021-01-06},
+}
+
+@article{Burt:1987,
+    author 		= {Ronald S. Burt},
+    title 		= {Social Contagion and Innovation: Cohesion versus Structural Equivalence},
+    year 		= {1987},
+    url 		= {https://www.jstor.org/stable/2779839?seq=1},
+    urldate 		= {2021-01-06},
+}
+
+@article{rogers:2003,
+    author 		= {Everett M. Rogers},
+    title 		= {Diffusion of Innovations},
+    year 		= {2003},
+    url 		= {https://www.researchgate.net/publication/257624104_Diffusion_of_Innovations_5th_edition_Everett_M_Rogers_Free_Press_New_York_NY_2003_551_pages},
+    urldate 		= {2021-01-06},
+}
+
+@article{watts:2002,
+    author 		= {Duncan J. Watts},
+    title 		= {A simple model of global cascades on random networks},
+    year 		= {2002},
+    url 		= {https://www.pnas.org/content/99/9/5766},
+    urldate 		= {2021-01-06},
+}
+
+
+@article{aral:2009,
+    author 		= {Sinan Aral, Lev Muchnik y Arun Sundararajan},
+    title 		= {Distinguishing influence-based contagion from homophily-driven diffusion in dynamic networks},
+    year 		= {2009},
+    url 		= {https://www.pnas.org/content/106/51/21544},
+    urldate 		= {2021-01-06},
+}
+
+@article{bakshy:2012,
+    author 		= {Bakshy E, Rosenn I, Marlow C, Adamic L},
+    title 		= {The role of social networks in information diffusion},
+    year 		= {2012},
+    url 		= {https://dl.acm.org/doi/10.1145/2187836.2187907},
+    urldate 		= {2021-01-06},
+}
+
+@article{watts:2011,
+    author 		= {Siddharth Suri ,Duncan J. Watts },
+    title 		= {Cooperation and Contagion in Web-Based, Networked Public Goods Experiments},
+    year 		= {2011},
+    url 		= {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0016836},
+    urldate 		= {2021-01-06},
+}
+
+@article{toole:2012,
+    author 		= {Jameson L. Toole ,Meeyoung Cha,Marta C. González},
+    title 		= {Modeling the Adoption of Innovations in the Presence of Geographic and Media Influences},
+    year 		= {2012},
+    url 		= {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0029528},
+    urldate 		= {2021-01-06},
+}
+
+@article{ruan:2015,
+    author 		= {Zhongyuan Ruan, Gerardo Iñiguez, Márton Karsai, János Kertész},
+    title 		= {Kinetics of Social Contagion},
+    year 		= {2015},
+    url 		= {https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.115.218702},
+    urldate 		= {2021-01-06},
+}
+
+@article{ruan:2015,
+    author 		= {Zhongyuan Ruan, Gerardo Iñiguez, Márton Karsai, János Kertész},
+    title 		= {Kinetics of Social Contagion},
+    year 		= {2015},
+    url 		= {https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.115.218702},
+    urldate 		= {2021-01-06},
+}
+
+@inproceedings{viswanath-2009-activity,
+  author = {Bimal Viswanath and Alan Mislove and Meeyoung Cha and Krishna P. Gummadi},
+  title = {On the Evolution of User Interaction in Facebook}, 
+  booktitle = {Proceedings of the 2nd ACM SIGCOMM Workshop on Social Networks (WOSN'09)},
+  location = {Barcelona, Spain},
+  month = {August},
+  year = {2009}
+}
+
+@article{barabasi:1999,
+    author 		= {Albert-László Barabási*, Réka Albert},
+    title 		= {Emergence of Scaling in Random Networks},
+    year 		= {1999},
+    url 		= {https://science.sciencemag.org/content/286/5439/509},
+    urldate 		= {2021-01-06},
+}
+
+ @article{erdos:1959,
+    author 		= {Paul Erdős},
+    title 		= {On random graphs I.},
+    year 		= {1959},
+    url 		= {http://www.leonidzhukov.net/hse/2014/networks/papers/erdos-1959-11.pdf},
+    urldate 		= {2021-01-06},
+}
+
+ @article{watts:1998,
+    author 		= {Duncan J. Watts, Steven H. Strogatz},
+    title 		= {Collective dynamics of ‘small-world’ networks},
+    year 		= {1998},
+    url 		= {http://snap.stanford.edu/class/cs224w-readings/watts98smallworld.pdf},
+    urldate 		= {2021-01-06},
+}
+
+@misc{networkx:2020,
+author = {Varios Autores},
+title = {NetworkX},
+year = {2020},
+url = {https://networkx.org/},
+urldate = {2021-01-06}
+}
+
+
+@misc{ndlib:2020,
+author = {Giulio Rossetti},
+title = {NDlib - Network Diffusion Library},
+year = {2020},
+url = {https://ndlib.readthedocs.io/en/latest/index.html},
+urldate = {2021-01-06}
+}
+
+@misc{matplotlib:2020,
+author = {John Hunter},
+title = {Matplotlib: Visualization with Python},
+year = {2020},
+url = {https://matplotlib.org/},
+urldate = {2021-01-06}
+}
+
+@misc{pyqt:2020,
+author = {Riverbank Computing},
+title = {PyQt5},
+year = {2020},
+url = {https://www.riverbankcomputing.com/software/pyqt/},
+urldate = {2021-01-06}
+}
+
+@misc{sqlite:2020,
+author = {Gerhard Häring},
+title = {SQLite databases},
+year = {2020},
+url = {https://docs.python.org/3/library/sqlite3.html},
+urldate = {2021-01-06}
+}
+
 
 @online{data:01,
   author = {Network Repository},
   url = {http://networkrepository.com/},
   urldate = {2020-11-16}
 }
-
-@article{cite:semillas,
-  author = {Morone Flaviano, Makse Hernan A.},
-  title = {Influence maximization in complex networks through optimal percolation. Nature},
-  year = {2015},
-  pages = "65–75",
-  urldate = {https://doi.org/10.1038/nature14604} ,
-}
-
-@article{cite:sinergia,
-  author = {Wang Wei, Tang Ming. Stanley H. Eugene, and Braunstei Lidia A.},
-  title = {Social contagions with communication channel alternation on multiplex networks.},
-  year = {2018}, 
-  pages = "98"
-}
-
-@article{cite:problemaIM,
- author = {Domingos P, Richardson M Mining.}, 
- title = {The network value of customers. Proceedings of the seventh ACM
-	  SIGKDD international conference on Knowledge discovery and data mining.},
- year = {2001} ,
- pages = "57–66"
-}
-@aritcle{cite:36,
-  author = {Centola D M, Macy M W, Eguıluz V M.} 
-  title = {Cascade dynamics of multiplex propagation.}
-  yeay = {2005}
- pages = "200–200"
-}
-
-@aritcle{cite:30,
-  author = {Zheng Muhua, Linyuan Lu¨, and Ming Zhao.}, 
-  title = {Spreading in online social networks: The role of social reinforcement.},
-  year = {2013}
-}
-
-
-@aritcle{cite:12,
-  author = {Kempe D., Kleinberg J., and Tardos E. }, 
-  title = {Maximizing the spread of influence through a social network.},
-  In Proc. ACM SIGKDD Int. Conf. Knowl.Discovery Data Mining. 
-  year = {2003}, 
- pages = {137–146}
